# protobuf-dcom-plugin

./: .gitignore  .travis.yml  CHANGES  CMakeLists.txt  README.md  appveyor.yml
COM Server Registry Dump/: COM Server Registry Dump.sln  COM Server Registry Dump.vsmdi  Local.testsettings  TraceAndTestImpact.testsettings  clean.bat
COM Server Registry Dump/COM Server Registry Dump/: COMServerRegistryDump.csproj  Program.cs  command_line_samples.txt
COM Server Registry Dump/RegistryManipulatorLib/: RegistryManipulator.cs  RegistryManipulatorLib.csproj
COM Server Registry Dump/RegistryManipulatorTests/: AssertExtensions.cs  QueryManagerTest.cs  RegistryManipulatorTest.cs  RegistryManipulatorTests.csproj
ci/appveyor/: build_TestBuildFullOut.bat  build_library.bat  emulate_appveyor.bat  install_bin2cpp.bat  install_protobuf.bat
ci/travis/: build_library.sh  install_bin2cpp.sh  install_protobuf.sh
docs/: Doxyfile.in  protobuf-dcom-plugin.xcf
references/dcom/: A Beginner Tutorial for Writing Simple COM-ATL DLL For VS2012 - CodeProject.url  A simple yet debuggable COM skeleton code - CodeProject®.url  Build Instructions (Windows) - The Chromium Projects.url  From CPP to COM.url  How can a CoClass implement multiple interfaces-.url  How to add WTL and ATL to visual studio c++ express 2008 - Stack Overflow.url  MFC & ATL in Visual Studio Express 2008  birgitplays.url  The Simplest COM Tutorial in Visual Studio 2008 - CodeProject.url  VARIANTs, SAFEARRAYs, and BSTRs, Oh My!.website  Visual C++ command line compile COM libr - C++ Forum.url  Walkthrough Creating a COM Server Using a Text Editor.website  Windows 8.1 Download kits and tools.url  c++ - How to build a SAFEARRAY of pointers to VARIANTs - Stack Overflow.website  c++ - How to define implementation of a COM coclass- - Stack Overflow.url  c++ - Passing an array using COM - Stack Overflow.website  camlidl-registry.cpp at master · xavierleroy-camlidl · GitHub.website  (+5 more)
sample/code_generator/sourceFiles/: CMakeLists.txt  DemoClient.cpp  DemoClient.h  DemoProtoLib.vcxproj.filters  DemoServer.cpp  DemoServer.idl  DemoServer.vcxproj  DemoServer.vcxproj.filters  DemoServerImpl.cpp  DemoServerImpl.h  DemoServerImpl.vcxproj  DemoServerImpl.vcxproj.filters  DemoServerMain.cpp  DemoServer_i.c  DemoTestCSharp.csproj  DemoTestCSharp.sln  DemoTestCSharpAssemblyInfo.cs  DemoTestCpp.cpp  DemoTestCpp.vcxproj.filters  DemoTestVBScript.vcxproj  ErrorHandlers.h  IComErrorProvider.h  ICounterService.h  MessageSerializer.cpp  MessageSerializer.h  RegisterServerRelease.bat  TestDemo.bat  TestDemo.pb.cc  UnregisterServerDebug.bat  dcomplugin.pb.cc  dcomplugin.pb.h  dlldata.c
sample/code_generator/templateFiles/: CMakeLists.txt  DCOMPLUGIN_COMPONENT_NAMEClient.cpp  DCOMPLUGIN_COMPONENT_NAMEClient.vcxproj  DCOMPLUGIN_COMPONENT_NAMEClient.vcxproj.filters  DCOMPLUGIN_COMPONENT_NAMEProtoLib.vcxproj  DCOMPLUGIN_COMPONENT_NAMEProtoLib.vcxproj.filters  DCOMPLUGIN_COMPONENT_NAMEServer.cpp  DCOMPLUGIN_COMPONENT_NAMEServer.idl  DCOMPLUGIN_COMPONENT_NAMEServer.vcxproj  DCOMPLUGIN_COMPONENT_NAMEServer.vcxproj.filters  DCOMPLUGIN_COMPONENT_NAMEServerImpl.template.cpp  DCOMPLUGIN_COMPONENT_NAMEServerImpl.vcxproj  DCOMPLUGIN_COMPONENT_NAMEServerMain.cpp  ErrorHandlers.h  IService.h  MessageSerializer.cpp  MessageSerializer.h  Registry.h  UnregisterServerDebug.bat  UnregisterServerRelease.bat
src/: !open_solutions.bat  clean.bat  copyright.txt  protobuf-dcom-plugin.sln  todo.txt
src/FileRepository/: CMakeLists.txt  EmbeddedFileCMakeLists.cpp  EmbeddedFileCMakeLists.h  EmbeddedFileClientCpp.cpp  EmbeddedFileClientCpp.h  EmbeddedFileClientFilters.cpp  EmbeddedFileClientFilters.h  EmbeddedFileClientHeader.cpp  EmbeddedFileClientHeader.h  EmbeddedFileClientProject.cpp  EmbeddedFileClientProject.h  EmbeddedFileErrorHandlersCpp.cpp  EmbeddedFileErrorHandlersCpp.h  EmbeddedFileErrorHandlersHeader.cpp  EmbeddedFileErrorHandlersHeader.h  EmbeddedFileIComErrorProvider.cpp  EmbeddedFileIComErrorProvider.h  EmbeddedFileIService.cpp  EmbeddedFileIService.h  EmbeddedFileMessageSerializerCpp.cpp  EmbeddedFileMessageSerializerCpp.h  EmbeddedFileMessageSerializerHeader.cpp  EmbeddedFileMessageSerializerHeader.h  EmbeddedFileProtoLibFilters.cpp  EmbeddedFileProtoLibFilters.h  EmbeddedFileProtoLibProject.cpp  EmbeddedFileProtoLibProject.h  EmbeddedFileRegisterServerDebug.cpp  EmbeddedFileRegisterServerDebug.h  EmbeddedFileRegisterServerRelease.cpp  EmbeddedFileRegisterServerRelease.h  EmbeddedFileRegistryCpp.cpp  EmbeddedFileRegistryCpp.h  EmbeddedFileRegistryHeader.cpp  EmbeddedFileRegistryHeader.h  EmbeddedFileServerCpp.cpp  EmbeddedFileServerCpp.h  EmbeddedFileServerFilters.cpp  EmbeddedFileServerFilters.h  EmbeddedFileServerHeader.cpp  (+27 more)
src/libDCOM/: CMakeLists.txt  ComponentManager.cpp  ComponentManager.h  DComGenerator.cpp  DComGenerator.h  DebugPrinter.cpp  FileDescriptorServiceRemover.cpp  FileDescriptorServiceRemover.h  IGuidGenerator.h  Md5GuidGenerator.cpp  Md5GuidGenerator.h  dcom.cpp  dcom.h  dcomplugin.bat  dcomplugin.pb.cc  dcomplugin.pb.h  dcomplugin.proto  libDCOM.vcxproj  libDCOM.vcxproj.filters
src/protobuf/: CMakeLists.txt
src/protobuf-dcom-plugin/: CMakeLists.txt  MacroManager.cpp  MacroManager.h  PluginCodeGenerator.cpp  PluginCodeGenerator.h  main.cpp  postbuild.bat  protobuf-dcom-plugin.vcxproj  protobuf-dcom-plugin.vcxproj.filters
src/protobuf/cmake/: protobuf-config-version.cmake.in  protobuf-config.cmake.in
src/protobuf/libprotobuf/: CMakeLists.txt
src/protobuf/libprotoc/: CMakeLists.txt
src/protobuf/protoc/: CMakeLists.txt
test/protobuf-dcom-plugin-unittest/: CMakeLists.txt  TestBuildFull.bat  TestBuildFull.cpp  TestCalculator.cpp  TestDcomFunctions.cpp  TestDemo.bat  TestMd5GuidGenerator.cpp  TestPluginRun.bat  TestPluginRun.cpp  TestVoidMessages.bat  TestVoidMessages.cpp  main.cpp  postbuild.bat  proto_postbuild.bat  protobuf-dcom-plugin-tests.vcxproj  protobuf-dcom-plugin-tests.x86.debug.xml  testutils.cpp  testutils.h
test_impl/: AddServerImpl.actual.cpp  TestAdd_proof.bat  VoidServerCppTest.cpp  VoidServerImpl.actual.cpp
(+87 files in other folders)
